# gaussian-splatting-cuda

./: CMakeLists.txt
gsplat/: CMakeLists.txt  MortonCodes.cpp  MortonCodes.cu  MortonCodes.h  Ops.h  ProjectionEWA3DGSFused.cu  RasterizeToPixels3DGSBwd.cu  RasterizeToPixelsFromWorld3DGSBwd.cu  Utils.cuh  newton_kernels.cu  newton_kernels.cuh  newton_optimizer.cpp
gsplat_backend/: CMakeLists.txt  newton_kernels.cu  newton_optimizer.cpp
include/core/: benchmark_utils.hpp  bilateral_grid.hpp  dataset.hpp  newton_optimizer.hpp  newton_strategy.hpp  parameters.hpp  rasterizer.hpp  splat_data.hpp  torch_utils.hpp  trainer.hpp
kernels/: newton_kernels.cu  newton_kernels.cuh
parameter/: optimization_params.json
src/: argument_parser.cpp  benchmark_utils.cpp  bilateral_grid.cpp  dataset.cpp  main.cpp  newton_optimizer.cpp  newton_strategy.cpp  parameters.cpp  rasterizer_autograd.cpp  splat_data.cpp  trainer.cpp
tests/: test_gsplat_ops.cpp
